--- a/modern-orm/modern-orm-mp/pom.xml
+++ b/modern-orm/modern-orm-mp/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>com.modernframework</groupId>
         <artifactId>modern-orm</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <groupId>com.modernframework</groupId>
     <artifactId>modern-orm-mp</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
 
 </project>
