--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
 
-    <name>modern-framework-${revision}</name>
+    <name>modern-parent:${revision}</name>
     <description>modern framework</description>
 
     <properties>
