--- a/modern-base/pom.xml
+++ b/modern-base/pom.xml
@@ -20,6 +20,11 @@
             <groupId>com.modernframework</groupId>
             <artifactId>modern-core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
