--- a/modern-orm/pom.xml
+++ b/modern-orm/pom.xml
@@ -8,6 +8,7 @@
         <groupId>com.modernframework</groupId>
         <artifactId>modern-parent</artifactId>
         <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>com.modernframework</groupId>
