--- a/modern-orm/pom.xml
+++ b/modern-orm/pom.xml
@@ -24,13 +24,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.modernsage</groupId>
-                <artifactId>modern-data-orm-api</artifactId>
+                <groupId>com.modernframework</groupId>
+                <artifactId>modern-orm-api</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
-                <groupId>com.modernsage</groupId>
-                <artifactId>modern-data-orm-mp</artifactId>
+                <groupId>com.modernframework</groupId>
+                <artifactId>modern-orm-mp</artifactId>
                 <version>${revision}</version>
             </dependency>
         </dependencies>
