--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,11 @@
 
     <modules>
         <module>modern-core</module>
+        <module>modern-dependencies</module>
         <module>modern-base</module>
         <module>modern-orm</module>
+        <module>modern-security</module>
         <module>modern-boot</module>
-        <module>modern-dependencies</module>
     </modules>
 
     <build>
