--- a/modern-dependencies/pom.xml
+++ b/modern-dependencies/pom.xml
@@ -131,6 +131,11 @@
             </dependency>
             <dependency>
                 <groupId>com.modernframework</groupId>
+                <artifactId>modern-data-redis</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.modernframework</groupId>
                 <artifactId>modern-security-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
