--- a/modern-dependencies/pom.xml
+++ b/modern-dependencies/pom.xml
@@ -69,7 +69,7 @@
         <commons-io.version>2.7</commons-io.version>
         <commons-codec.version>1.13</commons-codec.version>
         <commons-net.version>3.6</commons-net.version>
-        <commons-pool2.version>2.8.0</commons-pool2.version>
+        <commons-pool2.version>2.11.1</commons-pool2.version>
         <elasticsearch.version>7.17.4</elasticsearch.version>
         <commons-text.version>1.8</commons-text.version>
         <hutool.version>5.0.4</hutool.version>
@@ -137,6 +137,11 @@
             <dependency>
                 <groupId>com.modernframework</groupId>
                 <artifactId>modern-security-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.modernframework</groupId>
+                <artifactId>modern-security-spring</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
