--- a/modern-security/pom.xml
+++ b/modern-security/pom.xml
@@ -13,7 +13,7 @@
 
     <artifactId>modern-security</artifactId>
     <packaging>pom</packaging>
-    <name>modern-orm:${revision}</name>
+    <name>modern-security:${revision}</name>
 
     <modules>
         <module>modern-security-api</module>
