--- a/modern-security/modern-security-spring/pom.xml
+++ b/modern-security/modern-security-spring/pom.xml
@@ -21,6 +21,10 @@
         </dependency>
         <dependency>
             <groupId>com.modernframework</groupId>
+            <artifactId>modern-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.modernframework</groupId>
             <artifactId>modern-orm-mp</artifactId>
         </dependency>
         <dependency>
