1. 去除行内 tenant 支持 2. 增加动态表单 3. 加入test

--- a/modern-orm/modern-orm-mp/pom.xml
+++ b/modern-orm/modern-orm-mp/pom.xml
@@ -38,8 +38,8 @@
 
         <!-- 测试 -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -50,6 +50,10 @@
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-clogging</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                    <groupId>org.springframework.boot</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
