--- a/modern-dependencies/pom.xml
+++ b/modern-dependencies/pom.xml
@@ -34,6 +34,7 @@
         <ooxml-schemas.version>1.4</ooxml-schemas.version>
         <tutool.version>5.8.16</tutool.version>
         <java-uuid-generator.version>4.3.0</java-uuid-generator.version>
+        <fasterxml.version>2.17.2</fasterxml.version>
         <poi.version>4.1.2</poi.version>
         <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <reflections.version>0.9.11</reflections.version>
@@ -209,6 +210,27 @@
                 <artifactId>java-uuid-generator</artifactId>
                 <version>${java-uuid-generator.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${fasterxml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${fasterxml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${fasterxml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${fasterxml.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-api</artifactId>
