--- a/modern-base/pom.xml
+++ b/modern-base/pom.xml
@@ -52,8 +52,8 @@
 
         <!-- apache common -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
