--- a/modern-dependencies/pom.xml
+++ b/modern-dependencies/pom.xml
@@ -66,6 +66,7 @@
         <spring-cloud-alibaba.version>2.1.0.RELEASE</spring-cloud-alibaba.version>
 
         <commons-lang3.version>3.9</commons-lang3.version>
+        <commons-lang.version>2.6</commons-lang.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-io.version>2.7</commons-io.version>
         <commons-codec.version>1.13</commons-codec.version>
@@ -355,11 +356,11 @@
             </dependency>
 
             <!-- 第三方-->
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>ooxml-schemas</artifactId>
-                <version>${ooxml-schemas.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.apache.poi</groupId>-->
+<!--                <artifactId>ooxml-schemas</artifactId>-->
+<!--                <version>${ooxml-schemas.version}</version>-->
+<!--            </dependency>-->
             <!-- spring boot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -385,11 +386,11 @@
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${swagger2.version}</version>
             </dependency>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>${swagger2.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>io.springfox</groupId>-->
+<!--                <artifactId>springfox-swagger-ui</artifactId>-->
+<!--                <version>${swagger2.version}</version>-->
+<!--            </dependency>-->
 
             <!--一下mybatis plus相关依赖-->
             <!--动态数据源-->
@@ -421,11 +422,11 @@
                 <version>${mybatis-plus-generator.version}</version>
             </dependency>
             <!--企业版数据处理方案-->
-            <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-mate-starter</artifactId>
-                <version>${mybatis-mate-starter.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.baomidou</groupId>-->
+<!--                <artifactId>mybatis-mate-starter</artifactId>-->
+<!--                <version>${mybatis-mate-starter.version}</version>-->
+<!--            </dependency>-->
             <!--以上mybatis plus相关-->
 
             <!-- db -->
@@ -497,6 +498,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons-lang.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
