--- a/modern-dependencies/pom.xml
+++ b/modern-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.modernframework</groupId>
     <artifactId>modern-dependencies</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>modern-dependencies:${project.version}</name>
 
