--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <description>modern framework</description>
 
     <properties>
-        <revision>1.0.0-SNAPSHOT</revision>
+        <revision>1.0.0</revision>
 
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
