--- a/modern-dependencies/pom.xml
+++ b/modern-dependencies/pom.xml
@@ -35,7 +35,7 @@
         <tutool.version>5.8.16</tutool.version>
         <java-uuid-generator.version>4.3.0</java-uuid-generator.version>
         <fasterxml.version>2.17.2</fasterxml.version>
-        <poi.version>4.1.2</poi.version>
+<!--        <poi.version>4.1.2</poi.version>-->
         <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <reflections.version>0.9.11</reflections.version>
         <javassist.version>3.27.0-GA</javassist.version>
@@ -244,16 +244,16 @@
                 <version>${jjwt.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi-scratchpad</artifactId>
-                <version>${poi.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.poi</groupId>
-                <artifactId>poi-ooxml</artifactId>
-                <version>${poi.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.apache.poi</groupId>-->
+<!--                <artifactId>poi-scratchpad</artifactId>-->
+<!--                <version>${poi.version}</version>-->
+<!--            </dependency>-->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.poi</groupId>-->
+<!--                <artifactId>poi-ooxml</artifactId>-->
+<!--                <version>${poi.version}</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
